calendar header dark mode fix

--- a/attendance-app-front/src/app/calendar-header/calendar-header.component.less
+++ b/attendance-app-front/src/app/calendar-header/calendar-header.component.less
@@ -2,4 +2,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  .dark-mode{
+    button{
+      background: #49347b;
+      color: white;
+    }
+  }
 }
